--- a/manifest.json
+++ b/manifest.json
@@ -1,40 +1,29 @@
 {
   "manifest_version": 3,
-  "name": "PrevIA (Protege tu información)",
-  "version": "0.1.0",
-  "description": "Anonimiza, generaliza o securiza textos antes de enviarlos a sistemas de inteligencia artificial. Offline, local, sin red, sin dependencias.",
-  
-  "author": "Sara Cubero García-Conde",
-
+  "name": "PrevIA – Protege tus textos",
+  "version": "1.0.1",
+  "default_locale": "es",
+  "description": "Analiza, seudonimiza, generaliza y anonimiza tus textos antes de compartirlos. 100 % privado y sin conexión.",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-
   "action": {
+    "default_title": "Abrir PrevIA",
     "default_icon": {
       "16": "icons/icon16.png",
-      "32": "icons/icon32.png"
-    },
-    "default_title": "Abrir PrevIA"
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.png"
+    }
   },
-
   "background": {
     "service_worker": "background.js"
   },
-
-  "permissions": ["windows"],
-
+  "permissions": [],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self';"
   },
-
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "previa@saracubero.dev",
-      "strict_min_version": "109.0"
-    }
-  }
+  "privacy_policy": "https://github.com/SaraFullStack/PrevIA/blob/main/PRIVACY.md"
 }
